--- a/app/src/main/res/layout/insert_fragment.xml
+++ b/app/src/main/res/layout/insert_fragment.xml
@@ -1,102 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/main_bg"
-              android:id="@+id/base_layout"
-              android:orientation="vertical">
 
-    <RelativeLayout
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/base_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tab_height">
+        android:layout_height="match_parent"
+        android:background="@color/main_bg"
+        android:orientation="vertical">
 
-        <TextView
-            style="@style/title_style"
-            android:layout_centerInParent="true"
-            android:text="检查录入"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tab_height">
+
+            <TextView
+                style="@style/title_style"
+                android:layout_centerInParent="true"
+                android:text="检查录入"/>
+
+            <LinearLayout
+                android:id="@+id/ll_camara"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="right|center_vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:src="@mipmap/ic_launcher"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
 
         <LinearLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:gravity="right|center_vertical">
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-            <ImageView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="单位类型:"/>
+
+            <TextView
+                android:id="@+id/et_unit_type"
+                style="@style/et_style"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:hint="请填写"
+                android:minWidth="100dp"
+                />
+
+            <CheckBox
+                android:id="@+id/cb_zhongdian"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:layout_marginLeft="11dp"
+                android:text="是否是重点单位"/>
         </LinearLayout>
 
-    </RelativeLayout>
-
-
-    <LinearLayout
-        android:layout_marginTop="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="40dp">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:gravity="center_vertical"
-            android:text="单位类型:"
-            android:layout_height="match_parent"/>
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-        <EditText
-            android:id="@+id/et_unit_type"
-            android:minWidth="100dp"
-            android:layout_width="wrap_content"
-            style="@style/et_style"
-            android:hint="请填写"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="单位名称/检查地点"/>
+
+            <EditText
+                android:id="@+id/et_name"
+                style="@style/et_style"
+                android:hint="请填写"/>
+        </LinearLayout>
+
+
+        <com.astuetz.PagerSlidingTabStrip
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="48dip"
+            android:background="@color/main_bg2"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/colors"
+            android:layout_below="@+id/tabs"
             />
 
-        <CheckBox
-            android:id="@+id/cb_zhongdian"
-            android:layout_width="wrap_content"
-            android:text="是否是重点单位"
-            android:checked="true"
-            android:layout_marginLeft="11dp"
-            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
+        android:id="@+id/ll_no_current_task"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="match_parent"
+        android:background="@color/half_black"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
-            android:gravity="center_vertical"
-            android:text="单位名称/检查地点"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="请先设置当前任务"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp18"/>
 
-        <EditText
-            android:id="@+id/et_name"
-            android:hint="请填写"
-            style="@style/et_style"/>
+        <TextView
+            android:id="@+id/tv_set_current_task"
+            android:background="@drawable/tv_empty_rectangle"
+            android:layout_marginTop="16dp"
+            android:layout_width="wrap_content"
+            android:minWidth="160dp"
+            android:height="60dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="去设置"
+            android:textColor="@color/lightColorAccent"
+            android:textSize="@dimen/sp18"/>
     </LinearLayout>
 
-
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="48dip"
-        android:background="@color/main_bg2"/>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/colors"
-        android:layout_below="@+id/tabs"
-        />
-
-
-</LinearLayout>
+</FrameLayout>
