--- a/app/src/main/res/layout/unit_type_dialog.xml
+++ b/app/src/main/res/layout/unit_type_dialog.xml
@@ -5,13 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ScrollView
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <RadioGroup
         android:scrollbars="vertical"
         android:id="@+id/rg_type"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        >
 
         <RadioButton
             android:checked="true"
@@ -22,7 +26,8 @@
         <RadioButton
             android:id="@+id/rb_2"
             style="@style/rb_unit_style"
-            android:text="商场超市"/>
+            android:text="商场超市"
+            android:checked="false"/>
 
         <RadioButton
             android:id="@+id/rb_3"
@@ -106,6 +111,7 @@
 
 
     </RadioGroup>
+    </ScrollView>
 
 
 </LinearLayout>
