--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,6 +79,7 @@
     </style>
 
     <style name="et_style2">
+        <item name="android:inputType">number</item>
         <item name="android:paddingLeft">4dp</item>
         <item name="android:textSize">10sp</item>
         <item name="android:paddingTop">2dp</item>
