--- a/app/src/main/res/layout/activity_change_focus_type.xml
+++ b/app/src/main/res/layout/activity_change_focus_type.xml
@@ -42,7 +42,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb1"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -50,7 +50,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="餐饮店"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -58,7 +58,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="商场超市"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb3"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -66,7 +66,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="机关"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb4"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -74,7 +74,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="饭店宾馆"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb5"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -82,7 +82,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="农贸市场"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb6"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -90,7 +90,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="机场车站"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb7"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -98,7 +98,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="医院"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb8"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -107,7 +107,7 @@
                 android:enabled="false"
                 android:text="学校"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb9"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -115,7 +115,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="建筑拆迁工地"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb10"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -123,7 +123,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="居(家)委会"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb11"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -131,7 +131,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="食品加工企业"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb12"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -139,7 +139,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="其他企业"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb13"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -147,7 +147,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="道路"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb14"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -155,7 +155,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="公园公共绿地"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb15"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -164,7 +164,7 @@
                 android:text="垃圾中转站"/>
 
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb16"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -172,7 +172,7 @@
                 android:drawableRight="@drawable/rb_check_selector"
                 android:text="公共厕所"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb17"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
@@ -181,7 +181,7 @@
                 android:enabled="false"
                 android:text="大中型水体"/>
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/rb18"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp48"
