--- a/app/src/main/res/layout/activity_focus_type.xml
+++ b/app/src/main/res/layout/activity_focus_type.xml
@@ -1,69 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.tutu.pestcs.widget.OverScrollView
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/main_bg"
-    android:id="@+id/base_layout"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="@dimen/tab_height"
+        android:background="@color/colorPrimary">
+
+        <include
+            android:id="@+id/ll_back"
+            layout="@layout/back_layout"/>
 
         <TextView
             style="@style/title_style"
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
             android:text="重点单位类型"/>
 
+    </RelativeLayout>
 
-        <TextView
+    <com.tutu.pestcs.widget.OverScrollView
+
+        android:id="@+id/base_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/main_bg">
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp48"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:text="重点单位类型"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp15"/>
-
-        <GridView
-            android:id="@+id/gv_focus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="auto_fit"></GridView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp48"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:text="一般单位"
-            android:textColor="@color/black"
-            android:textSize="@dimen/sp15"/>
-
-        <GridView
-            android:id="@+id/gv_normal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="auto_fit"></GridView>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
 
-        <Button
-            android:id="@+id/btn_change"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/tab_height"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="48dp"
-            android:background="@drawable/btn_selector"
-            android:text="更改重点单位类型"
-            android:textColor="@color/white"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp48"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/text_bg"
+                android:gravity="center"
+                android:text="重点单位类型"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp15"/>
 
-    </LinearLayout>
-</com.tutu.pestcs.widget.OverScrollView>
+            <com.tutu.pestcs.widget.NoScrollGridView
+                android:id="@+id/gv_focus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="4"></com.tutu.pestcs.widget.NoScrollGridView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp48"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/text_bg"
+                android:gravity="center"
+                android:text="一般单位"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp15"/>
+
+            <com.tutu.pestcs.widget.NoScrollGridView
+                android:id="@+id/gv_normal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="4"></com.tutu.pestcs.widget.NoScrollGridView>
+
+
+            <Button
+                android:id="@+id/btn_change"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tab_height"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="48dp"
+                android:background="@drawable/btn_selector"
+                android:text="更改重点单位类型"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
+
+    </com.tutu.pestcs.widget.OverScrollView>
+</LinearLayout>
