--- a/app/src/main/res/layout/table_tv.xml
+++ b/app/src/main/res/layout/table_tv.xml
@@ -3,7 +3,9 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
-          android:background="@drawable/tv_empty_rectangle"
-          android:orientation="vertical">
+          android:paddingTop="6dp"
+          android:paddingBottom="6dp"
+          android:id="@+id/tv_text"
+          >
 
 </TextView>
