--- a/app/src/main/res/layout/activity_change_psw.xml
+++ b/app/src/main/res/layout/activity_change_psw.xml
@@ -70,12 +70,12 @@
             android:textSize="@dimen/sp18"/>
 
         <TextView
+            android:paddingLeft="4dp"
             android:id="@+id/tv_username"
             style="@style/et_style"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="12dp"
             android:gravity="center_vertical"
-            android:padding="0dp"
             android:textSize="16sp"/>
     </LinearLayout>
 
@@ -97,15 +97,15 @@
             android:textSize="@dimen/sp18"/>
 
         <EditText
+            android:paddingLeft="4dp"
             android:id="@+id/et_new_psw"
             style="@style/et_style"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="12dp"
             android:gravity="center_vertical"
             android:hint="最长12个字符"
             android:inputType="textPassword"
             android:maxLength="12"
-            android:padding="0dp"
             android:textSize="16sp"/>
 
     </LinearLayout>
@@ -127,15 +127,15 @@
             android:textSize="@dimen/sp18"/>
 
         <EditText
+            android:paddingLeft="4dp"
             android:id="@+id/et_new_pswc"
             style="@style/et_style"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="12dp"
             android:gravity="center_vertical"
             android:hint="最长12个字符"
             android:inputType="textPassword"
             android:maxLength="12"
-            android:padding="0dp"
             android:textSize="16sp"/>
 
     </LinearLayout>
