--- a/app/src/main/res/layout/flies_fragment.xml
+++ b/app/src/main/res/layout/flies_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/base_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/main_bg"
-              android:id="@+id/base_layout"
               android:orientation="vertical">
 
     <com.tutu.pestcs.widget.OverScrollView
@@ -11,81 +11,158 @@
         android:layout_height="match_parent"
         >
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="苍类控制水平"
-                android:textSize="14sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="室内抽样完成量"
-                android:textSize="12sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="(单位数一房间数)"
-                android:textSize="11sp"/>
-
-            <TableLayout
-                android:id="@+id/tl_table"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:stretchColumns="*">
+                android:orientation="vertical">
 
-                <TableRow android:layout_margin="0.5dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="室内抽样完成量"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="(单位数一房间数)"
+                    android:textSize="11sp"/>
+
+                <TableLayout
+                    android:id="@+id/tl_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:stretchColumns="*">
+
+                    <TableRow android:layout_margin="0.5dp">
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="单位类型"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="应查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="已查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="待查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:background="@color/colorTableTile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
                         android:gravity="center"
-                        android:paddingBottom="2dp"
-                        android:paddingTop="2dp"
-                        android:text="单位类型"
-                        android:textSize="12sp"
-                        android:textStyle="bold"/>
+                        android:text="外环境抽样完成量"
+                        android:textSize="14sp"/>
 
                     <TextView
-                        android:background="@color/colorTableTile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
                         android:gravity="center"
-                        android:paddingBottom="2dp"
-                        android:paddingTop="2dp"
-                        android:text="应查数"
-                        android:textSize="12sp"
-                        android:textStyle="bold"/>
+                        android:text="(单位数一容器数或延长米数)"
+                        android:textSize="11sp"/>
 
-                    <TextView
-                        android:background="@color/colorTableTile"
-                        android:gravity="center"
-                        android:paddingBottom="2dp"
-                        android:paddingTop="2dp"
-                        android:text="已查数"
-                        android:textSize="12sp"
-                        android:textStyle="bold"/>
+                    <TableLayout
+                        android:id="@+id/tl_table_wai"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="4dp"
+                        android:stretchColumns="*">
 
-                    <TextView
-                        android:background="@color/colorTableTile"
-                        android:gravity="center"
-                        android:paddingBottom="2dp"
-                        android:paddingTop="2dp"
-                        android:text="待查数"
-                        android:textSize="12sp"
-                        android:textStyle="bold"/>
-                </TableRow>
-            </TableLayout>
+                        <TableRow android:layout_margin="0.5dp">
+
+                            <TextView
+                                android:background="@color/colorTableTile"
+                                android:gravity="center"
+                                android:paddingBottom="2dp"
+                                android:paddingTop="2dp"
+                                android:text="单位类型"
+                                android:textSize="12sp"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:background="@color/colorTableTile"
+                                android:gravity="center"
+                                android:paddingBottom="2dp"
+                                android:paddingTop="2dp"
+                                android:text="应查数"
+                                android:textSize="12sp"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:background="@color/colorTableTile"
+                                android:gravity="center"
+                                android:paddingBottom="2dp"
+                                android:paddingTop="2dp"
+                                android:text="已查数"
+                                android:textSize="12sp"
+                                android:textStyle="bold"/>
+
+                            <TextView
+                                android:background="@color/colorTableTile"
+                                android:gravity="center"
+                                android:paddingBottom="2dp"
+                                android:paddingTop="2dp"
+                                android:text="待查数"
+                                android:textSize="12sp"
+                                android:textStyle="bold"/>
+                        </TableRow>
+                    </TableLayout>
+                </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
     </com.tutu.pestcs.widget.OverScrollView>
 </LinearLayout>
