--- a/app/src/main/res/layout/mouse_fragment.xml
+++ b/app/src/main/res/layout/mouse_fragment.xml
@@ -12,6 +12,11 @@
         >
 
         <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -21,16 +26,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:text="鼠类控制水平"
-                android:textSize="14sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
                 android:text="室内抽样完成量"
-                android:textSize="12sp"/>
+                android:textSize="14sp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -86,6 +83,84 @@
                         android:textStyle="bold"/>
                 </TableRow>
             </TableLayout>
+        </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="外环境抽样完成量"
+                    android:textSize="14sp"/>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="(单位数一延长米数)"
+                    android:textSize="11sp"/>
+
+                <TableLayout
+                    android:id="@+id/tl_table_wai"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="4dp"
+                    android:stretchColumns="*">
+
+                    <TableRow android:layout_margin="0.5dp">
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="单位类型"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="应查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="已查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:background="@color/colorTableTile"
+                            android:gravity="center"
+                            android:paddingBottom="2dp"
+                            android:paddingTop="2dp"
+                            android:text="待查数"
+                            android:textSize="12sp"
+                            android:textStyle="bold"/>
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
+
+
+
         </LinearLayout>
     </com.tutu.pestcs.widget.OverScrollView>
 </LinearLayout>
